style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, sans-serif;
}

body {
    background-color: white;
}

.navbar {
    width: 90%;
    max-width: 1200px;
    margin: 0 auto;
    height: 70px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0, 20px;
    background-color: #ffffff;
    color: white;
}

.logo h2 {
    font-size: 18px;
    font-weight: 700;
    color: #111827;
    line-height: 1;
}

.logo {
    display: flex;
    align-items: center;
    gap: 10px;
}

.logo img {
    width: 30px;
    height: 30px;
    object-fit: contain;
}

.logo p {
    font-size: 13px;
    color: #111827;
    font-weight: 600;
    line-height: 1;
    margin-top: 2px;
}

.menu {
    list-style: none;
    display: flex;
    gap: 30px;
}

.menu a {
    text-decoration: none;
    color: #6b7280;
    font-size: 14px;
    transition: 0.3s;
}

.menu a:hover {
    color: #2952ff;
}

.btn {
    padding: 12px 22px;
    background-color: #2f55ff;
    color: white;
    border-radius: 8px;
    font-size: 14px;
    font-weight: 600;
    display: inline-block;
    text-decoration: none;
}

.hero {


    background-image: url(assets/banner.jpg);
    height: calc(100vh - 70px);

    background-size: cover;
    background-position: center;

    display: flex;
    justify-content: center;
    align-items: center;

    text-align: center;
    color: white;
}



.hero-content h1 {
    font-size: 70px;
    font-weight: 800;

}

.hero-content p {
    width: 700px;
    max-width: 90%;
    font-size: 22px;
    line-height: 1.6;
}

.hero-content .btn {
    padding: 12px 22px;
    background-color: #2f55ff;
    color: white;
    border-radius: 8px;
    font-size: 18px;
    font-weight: 600;
    display: inline-block;
    text-decoration: none;
}

.speaker {
    width: 90%;
    margin: 80px auto;
    max-width: 1200px;
}

.speaker h2 {
    font-size: 40px;
    font-weight: 700;
    text-align: center;
    margin-bottom: 50px;
}

.speakers-card {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 25px;

}

.speaker-info {
    display: flex;
    align-items: center;
    gap: 25px;
    background: #fff;
    padding: 24px;
    border-radius: 12px;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, .04);
    border: 1px solid #e5e7eb;
}

.speaker-info img {
    width: 140px;
    height: 110px;
    object-fit: cover;
    object-position: center;
    border-radius: 8px;
    flex-shrink: 0;
}

.speaker-info span {
    color: #2563eb;
    font-weight: 600;
    font-size: 13px;
    text-transform: uppercase;
    letter-spacing: 0.5px;
}

.speaker-info h3 {
    margin: 4px 0 6px 0;
    font-size: 24px;
    color: #111827;
    font-weight: 700;
}

.speaker-info p {

    color: #6b7280;
    font-size: 14px;
    line-height: 1.4;
}

.speaker-card {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 25px;
}

.pricing section {
    background-color: #f9fafa;
    padding: 100px 0;
    width: 100%;
}

.pricing section h2 {
    font-size: 36px;
    font-weight: 800;
    text-align: center;
    letter-spacing: 0.5px;
    color: #0f172a;
}

.pricing-subtitle {
    display: grid grid-template-columns: repeat(3, 1fr);
    text-align: center;
    gap: 24px;
    width: 90%;
    max-width: 1200px;
    margin: 0 auto;
}

.price-card {
    background-color: #ffffff;
    border-radius: 12px;
    padding: 40px 32px;
    display: flex;
    flex-direction: column;
    border: 1px solid #fif559;
    justify-content: space-between;
    min-height: 520px;
}

.dark-card {
    background-color: #0b1329;
    color: #ffffff;
    border: none;

}

.plan-name {
    font-size: 11px;
    font-weight: 700;
    color: #94a3b8;
    letter-spacing: 0.8px;
}

.text-sky {
    color: #38bdf8;
}

.price-amount {
    font-size: 46px;
    font-weight: 800;
    color: #0f172a;
    margin: 10px 0 24px 0;
}

.dark-card .price-amount {
    color: #ffffff;
}

.per-text {
    font-size: 12px;
    font-weight: 400;
    color: #64748b;
}

.text-gray {
    color: #94a3b8;
}

.feature-list {
    list-style: none;
    border-top: 1px solid #f1f5f9;
    padding: 24px;
}

.dark-card .feature-list {
    border-top: 1px solid #1e293b;
}

.feature-list li {
    font-size: 13.5px;
    color: #475559;
    margin-bottom: 12px;
    padding-left: 20px;
    position: relative;
    line-height: 1.4;
}

.dark-card .feature-list li {
    color: #cbd5ec;
}

.feature-list li::before {
    content: "•";
    position: absolute;
    left: 4px;
    top: -10;
    color: #3b82f6;
    font-size: 18px;
}

.btn-outline {
    background: transparent;
    border: 1px solid #2563eb;
    color: #2563eb;
    width: 100%;
    padding: 12px;
    text-align: center;
    font-size: 14px;
    font-weight: 600;
    border-radius: 8px;
    cursor: pointer;
    transition: all 0.2s ease;
}

.btn-outline:hover {
    background-color: #f0f5ff;
}

.btn-solid-blue {

    background-color: #2563eb;
    color: #ffffff;
    width: 100%;
    padding: 12px;
    text-align: center;
    font-size: 14px;
    font-weight: 600;
    border-radius: 8px;
    border: none;
    cursor: pointer;
    transition: background 0.2s ease;

}

